objects/Rollup_Definition__c.object
<CustomObject>
    <description>This object was put in place by ShiftCRM to manage Program Package aggregations.</description>
    <fields>
        <fullName>Account_Lookup_Field_Name__c</fullName>
        <inlineHelpText>It could AccountId or Account__c or something else.</inlineHelpText>
        <label>Account Lookup Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aggregate_Function__c</fullName>
        <label>Aggregate Function</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criteria__c</fullName>
        <label>Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field_Aggregated__c</fullName>
        <label>Field Aggregated</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Object_Aggregated__c</fullName>
        <label>Object Aggregated</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Rollup Definition</label>
    <nameField>
        <label>Rollup Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rollup Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>